// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressPill should rende with customized props 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__ProgressPillWrapper-sc-j61ge1-1 jbIUJA"
    width="200"
  >
    <div
      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
    >
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
          style="background-color: rgb(172, 174, 176); border-radius: 0;"
        >
          <div
            class="ant-progress-bg"
            style="width: 66.66%; height: 16px; border-radius: 0;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
        title="66.66% success"
      >
        66.66% success
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__ProgressPillWrapper-sc-j61ge1-1 lgpvsD"
    width="100"
  >
    <div
      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
    >
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
          style="background-color: rgb(172, 174, 176); border-radius: 0;"
        >
          <div
            class="ant-progress-bg"
            style="width: 0%; height: 16px; border-radius: 0;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
        title="0%"
      >
        0%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 2`] = `
<DocumentFragment>
  <div
    class="styledComponents__ProgressPillWrapper-sc-j61ge1-1 lgpvsD"
    width="100"
  >
    <div
      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
    >
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
          style="background-color: rgb(172, 174, 176); border-radius: 0;"
        >
          <div
            class="ant-progress-bg"
            style="width: 33.33%; height: 16px; border-radius: 0;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
        title="33.33%"
      >
        33.33%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 3`] = `
<DocumentFragment>
  <div
    class="styledComponents__ProgressPillWrapper-sc-j61ge1-1 lgpvsD"
    width="100"
  >
    <div
      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
    >
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
          style="background-color: rgb(172, 174, 176); border-radius: 0;"
        >
          <div
            class="ant-progress-bg"
            style="width: 50%; height: 16px; border-radius: 0;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
        title="50%"
      >
        50%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 4`] = `
<DocumentFragment>
  <div
    class="styledComponents__ProgressPillWrapper-sc-j61ge1-1 lgpvsD"
    width="100"
  >
    <div
      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
    >
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
          style="background-color: rgb(172, 174, 176); border-radius: 0;"
        >
          <div
            class="ant-progress-bg"
            style="width: 66.66%; height: 16px; border-radius: 0;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
        title="66.66%"
      >
        66.66%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 5`] = `
<DocumentFragment>
  <div
    class="styledComponents__ProgressPillWrapper-sc-j61ge1-1 lgpvsD"
    width="100"
  >
    <div
      class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
    >
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
          style="background-color: rgb(172, 174, 176); border-radius: 0;"
        >
          <div
            class="ant-progress-bg"
            style="width: 100%; height: 16px; border-radius: 0;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
        title="100%"
      >
        100%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 6`] = `
<DocumentFragment>
  <div
    class="styledComponents__ProgressPillWrapper-sc-j61ge1-1 lgpvsD"
    width="100"
  >
    <div
      class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
    >
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
          style="background-color: rgb(172, 174, 176); border-radius: 0;"
        >
          <div
            class="ant-progress-bg"
            style="width: 100%; height: 16px; border-radius: 0;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
        title="100%"
      >
        100%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SeverityPill renders P1 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 jcWMnq"
    type="P1"
  >
    P1
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P2 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 dvJvxN"
    type="P2"
  >
    P2
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P3 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 eziBsl"
    type="P3"
  >
    P3
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P4 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 eOSbvr"
    type="P4"
  >
    P4
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders negative trend 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 jcWMnq"
    type="negative"
  >
    -123
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders no trend 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 IImNP"
    type="none"
  >
    0
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders positive trend 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 eKEDXy"
    type="positive"
  >
    123
  </span>
</DocumentFragment>
`;
